More progress on manual centrifuge